package W01.S191220035.code;

public class Thing {
    String name;

    public Thing(){

    }
    public Thing(String name){
        this.name = name;
    }

    public String getName(){
        return name;
    }
}
